# xoroshiro128pp

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  test_values.rs
